[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "typhos"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Interface generation for ophyd devices"
authors = [
    {name = "SLAC National Accelerator Laboratory"},
]
requires-python = ">=3.8"

[project.scripts]
typhos = "typhos.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "typhos/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["typhos"]

[toolhatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["dev-requirements.txt"]
